Fix logo positioning on mobile screens

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
 }
 
 h1 {
+    text-align: center;
     color: white;
     font-size: 1.8rem;
 }
@@ -237,6 +238,10 @@ a:hover {
 
 @media only screen and (max-width: 600px) {
 
+    .zelda {
+        font-size: 1rem;
+    }
+
     .img-quote {
         display: none;
     }
@@ -255,7 +260,8 @@ a:hover {
 
     .logo {
         width: 100vw;
-        height: 15vh;
+        /* height: 15vh; */
+        height: auto;
         position: static;
         gap: 10px;
     }
@@ -263,11 +269,19 @@ a:hover {
     .right-hero {
         width: auto;
         height: auto;
+        align-items: center;
+    }
+
+    .triforce {
+        /* display: none; */
+        height: 40%;
+        width: auto;
     }
 
     .top-text {
         /* width: 40ch; */
-        margin-top: 30px;
+        margin-top: 10px;
+        text-align: center;
         /* font-size: 0.9rem; */
     }
 
@@ -293,7 +307,7 @@ a:hover {
     }
     input {
         font-size: 1.5rem;
-        height: 2.3rem;
+        height: 3rem;
         width: 70vw;
     }
     .button,
